# ros4healthcare-demos

bed/data/person1.bag/: metadata.yaml  person1.bag_0.db3
bed/data/person2.bag/: metadata.yaml  person2.bag_0.db3
bed/data/person3.bag/: metadata.yaml  person3.bag_0.db3
bed/src/: README.md
treadmill/data/person1.bag/: metadata.yaml  person1.bag_0.db3
treadmill/data/person2.bag/: metadata.yaml  person2.bag_0.db3
treadmill/data/person3.bag/: metadata.yaml  person3.bag_0.db3
treadmill/src/exercise_interfaces/: CMakeLists.txt  package.xml
treadmill/src/exercise_interfaces/msg/: StackchanEmote.msg
treadmill/src/exercise_interfaces/srv/: Nimbuskun.srv  SessionParams.srv  SessionPrepare.srv
treadmill/src/exercise_session/: package.xml  setup.cfg  setup.py
treadmill/src/exercise_session/exercise_session/: exercise_controller.py
treadmill/src/exercise_session/launch/: session.launch.py
treadmill/src/treadmill_controller/: CMakeLists.txt  package.xml
treadmill/src/treadmill_controller/launch/: treadmill.launch.py
treadmill/src/treadmill_controller/src/: treadmill.cpp  treadmill_ctrl.cpp
wheelchair/: CMakeLists.txt  package.xml  ros4hc-demo-full.service
wheelchair/launch/: demo_launch.py
