<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros4hc_demo_full</name>
  <version>0.0.0</version>
  <description>Metapackage and configs for ROS4HC Demo</description>
  <maintainer email="moperez@ethz.ch">Monica Perez Serrano</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>polar_ros2</depend>
  <depend>sensomative_ros</depend>
  <depend>m5_udp_listener_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
